// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page nav mounted html should match snapshot 1`] = `
<nav>
    <ul role="menu" aria-label="Page Navigation">
        <li role="menuitem">
            <a href="#link-1" aria-label="Link Completed">
                <i aria-hidden="true" class="icon-complete ion-ios-checkmark"></i>
                Link
            </a>
        </li>
    </ul>
</nav>
`;

exports[`Page nav multiple links mounted html should match snapshot 1`] = `
<nav>
    <ul role="menu" aria-label="Page Navigation">
        <li role="menuitem">
            <a href="#link-1" aria-label="Link Completed">
                <i aria-hidden="true" class="icon-complete ion-ios-checkmark"></i>
                Link
            </a>
        </li>
        <li role="menuitem">
            <a href="#link-2" aria-label="Link2 Uncompleted">
                <i aria-hidden="true" class="icon-incomplete ion-record"></i>
                Link2
            </a>
        </li>
    </ul>
</nav>
`;
